# bevy_snake

./: Cargo.toml
src/: attributes.rs  color.rs  main.rs  main_camera.rs
src/board/: components.rs  mod.rs  systems.rs  utils.rs
src/debug/: mod.rs  systems.rs
src/effects/: mod.rs  systems.rs
src/enemy/: mod.rs  systems.rs
src/food/: mod.rs  systems.rs
src/player/: mod.rs  systems.rs
src/scoreboard/: mod.rs  styles.rs  systems.rs
src/snake/: components.rs  mod.rs  systems.rs  utils.rs
src/tetris/: components.rs  mod.rs  systems.rs
src/world/: mod.rs  styles.rs
