[package]
name = "snake"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

[dependencies.bevy]
version = "0.10.1"
default-features = false
features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "hdr",
  "ktx2",
  "tonemapping_luts",
  "zstd",
]
