[package]
name = "snake"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

[dependencies.bevy]
version = "0.10.1"
default-features = false
features = [
  # 2D rendering
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
  # Input, window, fonts
  "bevy_winit",
  "bevy_asset",
  # UI
  "bevy_text",
  "bevy_ui",
  # Bloom
  "hdr",
  "ktx2",
  "tonemapping_luts",
  "zstd",
]
